# robot-4wsd

./: README.md
src/four_wheel_steering_controller/: CMakeLists.txt
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/config/: controller.yaml
src/rover_control/include/: four_wheel_steering.h  pico_comm.hpp
src/rover_control/launch/: launch_simulation.launch  rover.launch
src/rover_control/rviz/: rviz_config.rviz
src/rover_control/src/: four_wheel_steering copy.h  four_wheel_steering.cpp  four_wheel_steering.h  pico_comms.hpp
src/rover_control_simulation/: CMakeLists.txt  package.xml
src/rover_control_simulation/config/: controller.yaml
src/rover_control_simulation/include/: four_wheel_steering_sim.h
src/rover_control_simulation/launch/: control.launch  rover_simulation.launch
src/rover_control_simulation/rviz/: rviz_config.rviz
src/rover_control_simulation/src/: four_wheel_steering_sim copy.cpp
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/meshes/STL/suspension/: steering.STL  sus_link.stl
src/rover_description/meshes/STL/wheel/: robot_wheel.stl
src/rover_description/robots/: rover.urdf.xacro
src/rover_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
src/rover_description/urdf/gps/: gps.urdf.xacro
src/rover_description/urdf/imu/: imu.urdf.xacro
src/rover_description/urdf/suspension/: suspension.gazebo.xacro  suspension.urdf.xacro
src/rover_description/urdf/wheel/: wheel.gazebo.xacro  wheel.urdf.xacro
src/rover_firmware/: 60-robot-rules.d  main2.c  main2.uf2
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
