<package format="2">
  <name>rover_control_simulation</name>
  <version>0.17.0</version>
  <description>Controller for a four wheel steering mobile base.</description>
  <maintainer email="kshitijmbhat@gmail.com">Kshitij Bhat</maintainer>
  <author email="kshitijmbhat@gmail.com">Kshitij Bhat</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/four_wheel_steering_controller</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

</package>
